modules/lib/dependencies/usrsctp/cobalt_sctp_shim.h

/**
 * Binds a socket to a local SCTP port on the AF_CONN address of a conn id.
 *
 * The wrapper builds a sockaddr_conn C-side (AF_CONN family, the port in network
 * byte order, the conn id as the address) and calls usrsctp_bind.
 *
 * @param sock   the socket handle from cobalt_sctp_socket_create.
 * @param port   the local SCTP port in host byte order.
 * @param connId the conn id whose AF_CONN address to bind.
 * @return COBALT_SCTP_OK on success, COBALT_SCTP_BAD_PARAM for a NULL socket,
 *         COBALT_SCTP_FAIL if usrsctp_bind returned an error.
 */
int32_t cobalt_sctp_bind(void *sock, int32_t port, void *connId);
/**
 * Starts the SCTP handshake toward a peer port on the AF_CONN address.
 *
 * The wrapper builds a sockaddr_conn C-side and calls usrsctp_connect. On a
 * non-blocking socket usrsctp returns -1 with EINPROGRESS for the normal case;
 * the wrapper maps that to COBALT_SCTP_IN_PROGRESS, an immediate connect to
 * COBALT_SCTP_OK. Handshake completion is signalled later through the
 * association-change notification delivered to the receive callback.
 *
 * @param sock   the socket handle from cobalt_sctp_socket_create.
 * @param port   the peer SCTP port in host byte order.
 * @param connId the conn id whose AF_CONN address to connect to.
 * @return COBALT_SCTP_OK on an immediate connect, COBALT_SCTP_IN_PROGRESS when
 *         the handshake has started, COBALT_SCTP_BAD_PARAM for a NULL socket.
 */
int32_t cobalt_sctp_connect(void *sock, int32_t port, void *connId);
/**
 * Feeds one inbound SCTP packet into the stack for the given conn id.
 *
 * Forwards to usrsctp_conninput with a type-of-service of 0. The call may drive
 * the SCTP state machine and synchronously invoke the receive callback of the
 * socket bound to this conn id.
 *
 * @param connId the conn id the packet arrived for.
 * @param data   the SCTP packet bytes.
 * @param len    the packet length in bytes.
 * @return COBALT_SCTP_OK on success, COBALT_SCTP_BAD_PARAM for a NULL conn id.
 */
int32_t cobalt_sctp_conninput(void *connId, const uint8_t *data, size_t len);
/**
 * Sends one application message on a stream with a fully reliable policy.
 *
 * The wrapper builds an sctp_sndinfo C-side (the stream id, the unordered flag,
 * the PPID converted to network byte order, zero context and association id) and
 * calls usrsctp_sendv with SCTP_SENDV_SNDINFO.
 *
 * @param sock      the socket handle from cobalt_sctp_socket_create.
 * @param data      the message bytes, or NULL for an empty message.
 * @param len       the message length in bytes.
 * @param streamId  the SCTP stream index.
 * @param ppid      the SCTP Payload Protocol Identifier in host byte order.
 * @param unordered non-zero for unordered delivery, zero for ordered.
 * @return the number of bytes accepted (equal to len on success), or a negative
 *         value (the usrsctp error, or COBALT_SCTP_BAD_PARAM for a NULL socket).
 */
int64_t cobalt_sctp_send(void *sock, const uint8_t *data, size_t len,
                         int32_t streamId, int32_t ppid, int32_t unordered);
/**
 * Sends one application message under a partial-reliability policy.
 *
 * The wrapper builds an sctp_sendv_spa C-side carrying both an sctp_sndinfo (as
 * cobalt_sctp_send builds) and an sctp_prinfo (the policy mapped from prPolicy,
 * the operand prValue), with the SCTP_SEND_SNDINFO_VALID and
 * SCTP_SEND_PRINFO_VALID flags, and calls usrsctp_sendv with SCTP_SENDV_SPA.
 *
 * @param sock      the socket handle from cobalt_sctp_socket_create.
 * @param data      the message bytes, or NULL for an empty message.
 * @param len       the message length in bytes.
 * @param streamId  the SCTP stream index.
 * @param ppid      the SCTP PPID in host byte order.
 * @param unordered non-zero for unordered delivery, zero for ordered.
 * @param prPolicy  one of COBALT_SCTP_PR_NONE / _TTL / _RTX.
 * @param prValue   the policy operand: lifetime milliseconds for _TTL, maximum
 *                  retransmissions for _RTX, ignored for _NONE.
 * @return the number of bytes accepted (equal to len on success), or a negative
 *         value (the usrsctp error, or COBALT_SCTP_BAD_PARAM for a NULL socket).
 */
int64_t cobalt_sctp_send_pr(void *sock, const uint8_t *data, size_t len,
                            int32_t streamId, int32_t ppid, int32_t unordered,
                            int32_t prPolicy, int32_t prValue);
/**
 * Enables or disables Nagle batching on the socket (the SCTP_NODELAY option).
 *
 * @param sock the socket handle from cobalt_sctp_socket_create.
 * @param on   non-zero to disable batching (enable NODELAY), zero to allow it.
 * @return COBALT_SCTP_OK on success, COBALT_SCTP_BAD_PARAM for a NULL socket,
 *         COBALT_SCTP_FAIL if usrsctp_setsockopt returned an error.
 */
int32_t cobalt_sctp_set_nodelay(void *sock, int32_t on);