modules/lib/src/main/java/com/github/auties00/cobalt/calls2/net/transport/sctp/bindings/CobaltSctp.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_bind(void *sock, int32_t port, void *connId)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_bind$descriptor() {
        return cobalt_sctp_bind.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_bind(void *sock, int32_t port, void *connId)
     * }
     */
    public static MethodHandle cobalt_sctp_bind$handle() {
        return cobalt_sctp_bind.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_bind(void *sock, int32_t port, void *connId)
     * }
     */
    public static MemorySegment cobalt_sctp_bind$address() {
        return cobalt_sctp_bind.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_sctp_bind(void *sock, int32_t port, void *connId)
     * }
     */
    public static int cobalt_sctp_bind(MemorySegment sock, int port, MemorySegment connId) {
        var mh$ = cobalt_sctp_bind.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_bind", sock, port, connId);
            }
            return (int)mh$.invokeExact(sock, port, connId);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_sctp_connect {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_INT,
            CobaltSctp.C_POINTER,
            CobaltSctp.C_INT,
            CobaltSctp.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_connect");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_connect(void *sock, int32_t port, void *connId)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_connect$descriptor() {
        return cobalt_sctp_connect.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_connect(void *sock, int32_t port, void *connId)
     * }
     */
    public static MethodHandle cobalt_sctp_connect$handle() {
        return cobalt_sctp_connect.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_connect(void *sock, int32_t port, void *connId)
     * }
     */
    public static MemorySegment cobalt_sctp_connect$address() {
        return cobalt_sctp_connect.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_sctp_connect(void *sock, int32_t port, void *connId)
     * }
     */
    public static int cobalt_sctp_connect(MemorySegment sock, int port, MemorySegment connId) {
        var mh$ = cobalt_sctp_connect.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_connect", sock, port, connId);
            }
            return (int)mh$.invokeExact(sock, port, connId);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_sctp_conninput {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_INT,
            CobaltSctp.C_POINTER,
            CobaltSctp.C_POINTER,
            CobaltSctp.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_conninput");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_conninput(void *connId, const uint8_t *data, size_t len)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_conninput$descriptor() {
        return cobalt_sctp_conninput.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_conninput(void *connId, const uint8_t *data, size_t len)
     * }
     */
    public static MethodHandle cobalt_sctp_conninput$handle() {
        return cobalt_sctp_conninput.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_conninput(void *connId, const uint8_t *data, size_t len)
     * }
     */
    public static MemorySegment cobalt_sctp_conninput$address() {
        return cobalt_sctp_conninput.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_sctp_conninput(void *connId, const uint8_t *data, size_t len)
     * }
     */
    public static int cobalt_sctp_conninput(MemorySegment connId, MemorySegment data, long len) {
        var mh$ = cobalt_sctp_conninput.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_conninput", connId, data, len);
            }
            return (int)mh$.invokeExact(connId, data, len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_sctp_send {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_LONG_LONG,
            CobaltSctp.C_POINTER,
            CobaltSctp.C_POINTER,
            CobaltSctp.C_LONG_LONG,
            CobaltSctp.C_INT,
            CobaltSctp.C_INT,
            CobaltSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_send");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int64_t cobalt_sctp_send(void *sock, const uint8_t *data, size_t len, int32_t streamId, int32_t ppid, int32_t unordered)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_send$descriptor() {
        return cobalt_sctp_send.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int64_t cobalt_sctp_send(void *sock, const uint8_t *data, size_t len, int32_t streamId, int32_t ppid, int32_t unordered)
     * }
     */
    public static MethodHandle cobalt_sctp_send$handle() {
        return cobalt_sctp_send.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int64_t cobalt_sctp_send(void *sock, const uint8_t *data, size_t len, int32_t streamId, int32_t ppid, int32_t unordered)
     * }
     */
    public static MemorySegment cobalt_sctp_send$address() {
        return cobalt_sctp_send.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int64_t cobalt_sctp_send(void *sock, const uint8_t *data, size_t len, int32_t streamId, int32_t ppid, int32_t unordered)
     * }
     */
    public static long cobalt_sctp_send(MemorySegment sock, MemorySegment data, long len, int streamId, int ppid, int unordered) {
        var mh$ = cobalt_sctp_send.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_send", sock, data, len, streamId, ppid, unordered);
            }
            return (long)mh$.invokeExact(sock, data, len, streamId, ppid, unordered);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_sctp_send_pr {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_LONG_LONG,
            CobaltSctp.C_POINTER,
            CobaltSctp.C_POINTER,
            CobaltSctp.C_LONG_LONG,
            CobaltSctp.C_INT,
            CobaltSctp.C_INT,
            CobaltSctp.C_INT,
            CobaltSctp.C_INT,
            CobaltSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_send_pr");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int64_t cobalt_sctp_send_pr(void *sock, const uint8_t *data, size_t len, int32_t streamId, int32_t ppid, int32_t unordered, int32_t prPolicy, int32_t prValue)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_send_pr$descriptor() {
        return cobalt_sctp_send_pr.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int64_t cobalt_sctp_send_pr(void *sock, const uint8_t *data, size_t len, int32_t streamId, int32_t ppid, int32_t unordered, int32_t prPolicy, int32_t prValue)
     * }
     */
    public static MethodHandle cobalt_sctp_send_pr$handle() {
        return cobalt_sctp_send_pr.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int64_t cobalt_sctp_send_pr(void *sock, const uint8_t *data, size_t len, int32_t streamId, int32_t ppid, int32_t unordered, int32_t prPolicy, int32_t prValue)
     * }
     */
    public static MemorySegment cobalt_sctp_send_pr$address() {
        return cobalt_sctp_send_pr.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int64_t cobalt_sctp_send_pr(void *sock, const uint8_t *data, size_t len, int32_t streamId, int32_t ppid, int32_t unordered, int32_t prPolicy, int32_t prValue)
     * }
     */
    public static long cobalt_sctp_send_pr(MemorySegment sock, MemorySegment data, long len, int streamId, int ppid, int unordered, int prPolicy, int prValue) {
        var mh$ = cobalt_sctp_send_pr.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_sctp_send_pr", sock, data, len, streamId, ppid, unordered, prPolicy, prValue);
            }
            return (long)mh$.invokeExact(sock, data, len, streamId, ppid, unordered, prPolicy, prValue);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_sctp_set_nodelay {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltSctp.C_INT,
            CobaltSctp.C_POINTER,
            CobaltSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("cobalt_sctp_set_nodelay");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_nodelay(void *sock, int32_t on)
     * }
     */
    public static FunctionDescriptor cobalt_sctp_set_nodelay$descriptor() {
        return cobalt_sctp_set_nodelay.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_nodelay(void *sock, int32_t on)
     * }
     */
    public static MethodHandle cobalt_sctp_set_nodelay$handle() {
        return cobalt_sctp_set_nodelay.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_sctp_set_nodelay(void *sock, int32_t on)
     * }
     */
    public static MemorySegment cobalt_sctp_set_nodelay$address() {
        return cobalt_sctp_set_nodelay.ADDR;
    }
